Fixed introduction size on mobile

--- a/home_style.css
+++ b/home_style.css
@@ -218,7 +218,7 @@ body {
         text-underline-offset: 8px;
     }
 
-    .centered-text p {
+    .centered-text h1 {
         font-size: 40px;
         padding-bottom: 0.2em;
     }
